SQL skript fix, town / hero controllers(get)

--- a/Heroes3WebApp/Heroes3WebApp/Heroes3WebApp/Views/Home/Privacy.cshtml
+++ b/Heroes3WebApp/Heroes3WebApp/Heroes3WebApp/Views/Home/Privacy.cshtml
@@ -1,6 +1,12 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
+    ViewData["Title2"] = "Heroes3App";
 }
 <h1>@ViewData["Title"]</h1>
+<h2>@ViewData["Title2"] </h2>
+<h3>@ViewData["Title2"] </h3>
+<h4>@ViewData["Title2"] </h4>
+<h5>@ViewData["Title2"] </h5>
 
 <p>Use this page to detail your site's privacy policy.</p>
+<p>lalalalala.</p>
