--- a/Heroes3WebApp/Heroes3WebApp/Heroes3WebApp/Views/Town/List.cshtml
+++ b/Heroes3WebApp/Heroes3WebApp/Heroes3WebApp/Views/Town/List.cshtml
@@ -6,8 +6,10 @@
 
 <h1>@ViewData["Title"]</h1>
 
+<hr>
+
 @foreach(var item in Model)
 {
-    <p><a class="nav-link text-dark" asp-area="" asp-controller="Town" asp-action="TownInfo" asp-route-id=@item.Id> @item.Name </a></p>
+    <p><a class="nav-link text-dark" asp-area="" asp-controller="Town" asp-action="TownInfo" asp-route-id=@item.Id>
+        <img src="data:image/gif;base64, @Convert.ToBase64String(item.Picture)"/> @item.Name </a></p>
 }
-
