--- a/Heroes3WebApp/Heroes3WebApp/Heroes3WebApp/Views/Town/TownInfo.cshtml
+++ b/Heroes3WebApp/Heroes3WebApp/Heroes3WebApp/Views/Town/TownInfo.cshtml
@@ -2,10 +2,16 @@
 
 <h1>@Model.Name</h1>
 
+<hr>
+
+<p><img src="data:image/gif;base64, @Convert.ToBase64String(Model.DetailPicture)"/></p>
+
+<h2>Town discription</h2>
+
 <p>@Model.Discription</p>
 
-<p>@Model.LandscapeName</p>
+<p><b>Landscape type: </b>@Model.LandscapeName</p>
 
-<p>@Model.HeroClass_1</p>
+<p><b>Warrior hero class: </b>@Model.HeroClass_1</p>
 
-<p>@Model.HeroClass_2</p>
+<p><b>Mage hero class: </b>@Model.HeroClass_2</p>
