--- a/Heroes3WebApp/Heroes3WebApp/Heroes3WebApp/Views/Town/TownInfo.cshtml
+++ b/Heroes3WebApp/Heroes3WebApp/Heroes3WebApp/Views/Town/TownInfo.cshtml
@@ -1,4 +1,4 @@
-﻿@model TownDetailModel
+﻿@model TownDetailViewModel
 
 <h1>@Model.Name</h1>
 
@@ -15,3 +15,5 @@
 <p><b>Warrior hero class: </b>@Model.HeroClass_1</p>
 
 <p><b>Mage hero class: </b>@Model.HeroClass_2</p>
+
+<p>@Model.</p>
