--- a/Heroes3WebApp/Heroes3WebApp/Heroes3WebApp/Views/Town/List.cshtml
+++ b/Heroes3WebApp/Heroes3WebApp/Heroes3WebApp/Views/Town/List.cshtml
@@ -11,5 +11,11 @@
 @foreach(var item in Model)
 {
     <p><a class="nav-link text-dark" asp-area="" asp-controller="Town" asp-action="TownInfo" asp-route-id=@item.Id>
-        <img src="data:image/gif;base64, @Convert.ToBase64String(item.Picture)"/> @item.Name </a></p>
+            @if (item.Picture != null)
+            {
+                <img src="data:image/gif;base64, @Convert.ToBase64String(item.Picture)"/>
+            }
+            @item.Name </a></p>
 }
+
+<a class="nav-link text-dark" asp-area="" asp-controller="Town" asp-action="CreateTown"> add </a>
